--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 p, h1, h2{
 	color: #333;
+	font-family: georgia;
 }
 h2{
 	font-size: 24px;
@@ -15,7 +16,7 @@ p{
 	padding: 150px 0px;
 }
 #header h1{
-	font-size: 50px;
+	font-size: 60px;
 	font-style: italic;
 	font-family: georgia;
 	width: 500px;
@@ -24,6 +25,7 @@ p{
 }
 .tagline {
     font-size: 24px;
+    line-height: 37px;
     width: 400px;
     margin: 20px auto;
     font-family: georgia;
@@ -52,7 +54,7 @@ p{
     width: 20px;
     left: 348px;
     position: relative;
-    top: -15px;
+	top: -25px;
     overflow: hidden;
     transition: 0.4s;
     -webkit-transition: 0.4s;
@@ -73,7 +75,7 @@ p{
 .presentation:hover .ball {
     width: 80px;
     height: 80px;
-    top: -45px;
+    top: -55px;
     left: 318px;
 }
 .presentation:hover img {
@@ -111,14 +113,15 @@ h3.title {
 p.duration {
     font-style: italic;
     position: relative;
-    right: -90px;
-    top: 62px;
+	right: -94px;
+    top: 55px;
     display: inline;
 }
 p.topic {
     font-family: georgia;
     position: relative;
-    top: 20px;
+    top: 10px;
+	height: 18px;
 }
 .person:nth-child(odd){
 	background: #eee;
@@ -134,7 +137,8 @@ p.topic {
 	font-family: arial;
 	font-variant: small-caps;
 	position: relative;
-    top: 0px;
+	top: 10px;
+    height: 30px;
 }
 .presentation h3{
 	font-size: 28px;
@@ -147,8 +151,11 @@ p.topic {
 	font-size: 30px;
 }
 @media (max-width: 600px) {
+	.presentation:hover .ball {
+		left: 198px;
+	}
 	#header h1{
-		font-size: 40px;
+		font-size: 45px;
 		width: 400px;
 	}
 	.tagline {
@@ -168,6 +175,15 @@ p.topic {
 	.ball{
 		left: 228px;
 	}
+	.ball img{
+		display: none;
+	}
+	.presentation:hover .ball {
+		height: 20px;
+	    width: 20px;
+		left: 228px;
+		top: -25px;
+	}
 	.scheduleview h2, .generalinformation h2{
 		width: 240px;
 	}
@@ -180,9 +196,12 @@ p.topic {
 	#header img{
 		width: 300px;
 	}
+	.ball{
+		top: -34px;
+	}
 	p.duration {
 	    right: 0px;
-	    top: -20px;
+	    top: 10px;
 	    display: block;
 	}
 	#footer{
