--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
   animation-play-state: paused;
 }
 
-body {
+.body-main {
 	width: 100wh;
 	height: 100vh;
 	color: #fff;
@@ -30,6 +30,23 @@ body {
 	-webkit-animation: Gradient 5s ease infinite;
 	-moz-animation: Gradient 5s ease infinite;
 	animation: Gradient 5s ease infinite;
+}
+
+.body-info {
+	color: #fff;
+	background: #f37f4a;
+}
+.body-schema {
+	color: #fff;
+	background: #c1ae48;
+}
+.body-kitscon {
+	color: #fff;
+	background: #7ac4bb;
+}
+.body-contact {
+	color: #fff;
+	background: #f2f2ee;
 }
 
 @-webkit-keyframes Gradient {
@@ -69,14 +86,15 @@ body {
 }
 
 body {
-  font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeueW01-Thin", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeueW01-Thin", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	margin: 0px;
 }
 
 h1 {
 	font-size: 10vh;
 	text-align: center;
 	position: absolute;
-	top: 25%;
+	top: 35%;
 	right: 0;
 	left: 0;
 }
@@ -106,4 +124,79 @@ h2 {
     50% {
       opacity: 0;
     }
-  }
+	}
+	
+	.put {
+		font-size: xx-large;
+		list-style-type: none;
+	}
+
+	.ko {
+		padding: 0;
+		list-style: none;
+	}
+
+	
+	nav ul {
+		text-align: center;
+		background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%);
+		box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+		padding: 0;
+	}
+	
+	nav ul li {
+		display: inline-block;
+		vertical-align: middle;
+	}
+	
+	nav ul li a {
+		padding: 5px;
+		text-transform:uppercase;
+		color: rgba(0, 35, 122, 0.5);
+		font-size: 18px;
+		text-decoration: none;
+		display: block;
+	}
+	
+	nav ul li a:hover {
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+		background: rgba(255, 255, 255, 0.1);
+		color: rgba(0, 35, 122, 0.7);
+	}
+
+
+	.avatar {
+		border-radius: 50%;
+		overflow: hidden;
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+		animation: float 6s ease-in-out infinite;
+		z-index: -1;
+	}
+	
+
+	.container {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		z-index: -1;
+	}
+	
+
+	@keyframes float {
+		0% {
+			box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+			transform: translatey(0px);
+		}
+		50% {
+			box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+			transform: translatey(-20px);
+		}
+		100% {
+			box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+			transform: translatey(0px);
+		}
+	}
