--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,13 @@ h2 {
 		z-index: -1;
 	}
 	
+	.cont {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		z-index: -1;
+	}
 
 	@keyframes float {
 		0% {
